CR-2004-08-17-1: Enhancem.:  - added comment about flushing job reports
                               when jobs are started in execd.

CR-2004-08-17-0: Testsuite:  - added wait time in compile_source
                             - raised wait time for qmaster shutdown

AA-2004-08-12-0: Bugfix:     - qmon_help.ad help corrections
                             - sge_centry_qconf.c missing parentheses break build
                             - qmon_calendar.c NONE strings were missing for added calendars
                             - qmon_ckpt.c Reschedule flag is part of Signal When flags
                             - qmon_cluster.c delegated_file_staging flag added
                             - qmon_manop.c set corresponding tab when invoked from Policy dialog
                               dialog resize
                             - qmon_util.c hostgroups with @f* were not displayed
                 Issues:     reported during tests             
                 Review:     CR
                 Changed:    qmon
                 
                             
MD-2004-08-12-0: Bugfix:     changed wrong directory of qping binary
                             autoinst shadowd
                 Changed:    inst_sge

CR-2004-08-12-0: Testsuite:  raised timeout when waiting for qmaster to get 
                             down

RH-2004-08-12-0: Bugfix:     Refix Issue 1161
                 Issue:      1161
                 Bugtraq:    5080856
                 Review:     CR
                 Changed:    qconf

CR-2004-08-11-4: Testsuite: - fixed bug which caused error in qmod reschedule
                              test
                            - fixed tcl bug in issue test 193

MD-2004-08-11-1: Bugfix:    - sge backup cannot override older backups
                 Issue:       1222
                 Bugtraq:     5085508
                 Review:      HP
                 Changed:     inst_sge

MD-2004-08-11-0: Bugfix:    - sge_inst restore does not work